--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <main>
-        <h1 aria-label="Google Earth Web Store"><animated-logo></animated-logo></h1>
+        <h1 class="hero" aria-label="Google Earth Web Store"><animated-logo></animated-logo></h1>
         <search>
             <search-bar></search-bar>
         </search>
