--- a/pages/app.html
+++ b/pages/app.html
@@ -30,6 +30,7 @@
     </header>
     <main>
         <download-app></download-app>
+        <carousel-component></carousel-component>
     </main>
 
 </body>
