--- a/pages/app.html
+++ b/pages/app.html
@@ -31,6 +31,7 @@
     <main>
         <download-app></download-app>
         <carousel-component></carousel-component>
+        <app-details></app-details>
     </main>
 
 </body>
