--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GO Web Store | Home</title>
+
+    <meta name="description" content="A web store built for the liquid galaxy apps.">
+    <meta property="og:title" content="GO Web Store by liquid galaxy">
+    <meta property="og:description" content="A web store built for the liquid galaxy apps.">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/LiquidGalaxyLAB/GO-Web-Store/refs/heads/main/assets/Cover.png">
+    <meta property="og:url" content="https://store.liquidgalaxy.eu">
+    <meta property="og:type" content="website">
+    <meta name="canonical" content="https://store.liquidgalaxy.eu">
+    <link rel="shortcut icon" href="./assets/Go Web Store.svg" type="image/x-icon">
+
+    <link rel="manifest" href="./manifest.json">
     <script type="importmap">
         {
               "imports": {
