--- a/pages/app.html
+++ b/pages/app.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GO Web Store | Apps</title>
-
+    <meta name="theme-color" content="#10131a" />
     <meta name="description" content="A web store built for the liquid galaxy apps.">
     <meta property="og:title" content="GO Web Store by liquid galaxy">
     <meta property="og:description" content="A web store built for the liquid galaxy apps.">
