--- a/pages/app.html
+++ b/pages/app.html
@@ -15,6 +15,8 @@
     <meta property="og:type" content="website">
     <meta name="canonical" content="https://store.liquidgalaxy.eu">
     <link rel="shortcut icon" href="../assets/Go Web Store.svg" type="image/x-icon">
+    <link rel="manifest" href="../manifest.json">
+
 
     <script type="importmap">
         {
