--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         document.adoptedStyleSheets.push(typescaleStyles.styleSheet);
     </script>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/vt-index.css">
     <script type="module" src="./js/script.js" defer></script>
     <script>
         if ("serviceWorker" in navigator) {
