--- a/app.html
+++ b/app.html
@@ -70,7 +70,14 @@
         <app-details></app-details>
         <carousel-component></carousel-component>
     </main>
+    <script>
+        function sendHeight() {
+            window.parent.postMessage(document.body.scrollHeight, '*');
+        }
 
+        window.onload = sendHeight;
+        window.onresize = sendHeight;
+    </script>
 </body>
 
 </html>
