--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GO Web Store | Home</title>
+    <title>AppBox | Home</title>
     <meta name="theme-color" content="#10131a" />
-    <meta name="description" content="A web store built for the liquid galaxy apps.">
-    <meta property="og:title" content="GO Web Store by liquid galaxy">
-    <meta property="og:description" content="A web store built for the liquid galaxy apps.">
+    <meta name="description" content="A web store built for andorid apps.">
+    <meta property="og:title" content="AppBox by Ritwick Raj Makhal">
+    <meta property="og:description" content="A web store built for andorid apps.">
     <meta property="og:image"
-        content="https://raw.githubusercontent.com/LiquidGalaxyLAB/GO-Web-Store/refs/heads/main/assets/Cover.png">
-    <meta property="og:url" content="https://store.liquidgalaxy.eu">
+        content="https://raw.githubusercontent.com/ritwickrajmakhal/Appbox/refs/heads/main/assets/Cover.png">
+    <meta property="og:url" content="https://ritwickrajmakhal.github.io/AppBox">
     <meta property="og:type" content="website">
-    <meta name="canonical" content="https://store.liquidgalaxy.eu">
-    <link rel="shortcut icon" href="./assets/Go Web Store.svg" type="image/x-icon">
+    <meta name="canonical" content="https://ritwickrajmakhal.github.io/AppBox">
+    <link rel="shortcut icon" href="./assets/smartphone.png" type="image/x-icon">
 
     <link rel="manifest" href="./manifest.json">
     <script type="importmap">
@@ -52,7 +52,7 @@
 
 <body>
     <main>
-        <h1 class="hero" aria-label="Google Earth Web Store"><animated-logo></animated-logo></h1>
+        <h1 class="hero" aria-label="AppBox by Ritwick Raj Makhal"><animated-logo></animated-logo></h1>
         <search>
             <search-bar></search-bar>
         </search>
